<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Discusys</string>
    <string name="app_regular_mode">Discusys Regular</string>
    <string name="app_experiment_mode">Discusys Experiment</string>
    <!-- titles -->
    <string name="activity_title_persons">Persons</string>
    <string name="activity_title_discussions">Discussions</string>
    <string name="activity_title_discussions_info">Discussion info</string>
    <string name="activity_title_image_preview">View image</string>
    <string name="activity_title_topics">Topics</string>
    <string name="activity_title_points">Points</string>
    <string name="activity_title_point">Edit point</string>
    <string name="activity_title_sessions">Sessions</string>
    <string name="activity_title_seats">Seats</string>
    <string name="activity_title_webview">Select url</string>
    <string name="activity_title_youtube">Select youtube video</string>
    <string name="activity_title_preferences">Preferences</string>
    <string name="activity_title_comment">Comment</string>
    <string name="action_mode_title_points">Edit point</string>
    <string name="action_mode_title_view_points">View point</string>
    <string name="dialog_title_user_name">Input user name</string>
    <string name="dialog_title_creating_user">Creating user...</string>
    <string name="dialog_title_downloading_database">Downloading database...</string>
    <string name="dialog_title_comment">Type your comment</string>
    <string name="dialog_title_settings_server">Server url</string>
    <string name="dialog_title_attach">Attach</string>
    <string name="dialog_title_delete_point">Delete point?</string>
    <string name="dialog_text_file_explorer_need_install_first">Install file explorer application first to use attachment function. </string>
    <string name="dialog_text_pdf_viewer_need_install_first">Install pdf viewer application first to see pdf preview. </string>
    <string name="dialog_text_camera_need_install_first">Install camera application first to use attachment function. </string>
    <string name="dialog_text_confirm_delete">You\'ll lose attached media and comments!</string>
    <string name="dialog_text_youtube_select_video_first">Open video first to use attachment function. </string>
    <string name="dialog_text_sdcard_unmounted">SD Card is not available. </string>
    <string name="tab_title_comments">Comments</string>
    <string name="tab_title_description">Description</string>
    <string name="tab_title_media">Media</string>
    <string name="tab_title_source">Source</string>
    <string name="title_settings_server">Server address</string>
    <!-- buttons -->
    <string name="button_title_comment">Comment</string>
    <string name="button_title_attach_url">Attach url</string>
    <string name="button_title_attach_image">Attach image</string>
    <string name="button_title_attach_pdf">Attach pdf</string>
    <string name="button_title_attach_photo">Attach photo</string>
    <string name="button_title_select_attach">Add attachment</string>
    <string name="button_title_go_to_market">Go to market</string>
    <string name="button_title_cancel">Cancel</string>
    <!-- menus -->
    <string name="menu_action_refresh">Refresh</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_change_topic">Change topic</string>
    <string name="menu_action_new">New</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_cancel">Cancel</string>
    <string name="menu_action_new_attachment">Save link</string>
    <string name="menu_action_view_discussion_info">Info</string>
    <string name="menu_action_settings">Settings</string>
    <!-- texts -->
    <string name="text_empty_list">Empty list</string>
    <string name="text_empty_persons_list">No persons</string>
    <string name="text_empty_comments_list">No comments</string>
    <string name="text_empty_points_list">No points</string>
    <string name="text_empty_discussions_list">No discussions</string>
    <string name="text_empty_topics_list">No topics</string>
    <string name="text_empty_sessions_list">No sessions</string>
    <string name="text_empty_seats_list">No seats</string>
    <string name="text_empty_media_list">No media</string>
    <string name="text_empty_discussion_info">Disscussion info is empty</string>
    <string name="text_empty_seat_person">&lt;seat is empty&gt;</string>
    <string name="text_select_point">Select point to see details</string>
    <string name="text_other_users_points">Other</string>
    <string name="text_other_users_points_format">%s</string>
    <string name="text_current_user_points">Your</string>
    <string name="text_point_shoose_a_side_code">Agreement side: </string>
    <string name="text_point_name">Description</string>
    <string name="text_point_description">Description</string>
    <string name="text_point_comment">Comments</string>
    <string name="text_point_shared_to_public">Shared to public: </string>
    <!-- text errors -->
    <string name="text_error_network_off">Network is not connected. Turn it on and retry later.</string>
    <string name="text_error_client_handler">Cant connect to server. Check if it works and retry later.</string>
    <string name="text_error_database_io">Data structure error while downloading <xliff:g id="type">%1$s</xliff:g>. Please, notify developer.</string>
    <!-- toasts -->
    <string name="toast_saved">Saved</string>
    <string name="toast_version">Version: <xliff:g id="version">%1$s</xliff:g></string>
    <string name="toast_sync_error"> Sync error: <xliff:g id="error">%1$s</xliff:g></string>
    <!-- hints -->
    <string name="hint_your_comment">Text comment</string>
    <string name="hint_your_point_name">Name</string>
    <string name="hint_your_point_description">Full description</string>
    <!--  -->
    <string name="summary_server_settings">Select server address</string>
    <!-- Progress message -->
    <string name="progress_connecting">Make server connection</string>
    <string name="progress_downloading_persons">Persons ...</string>
    <string name="progress_downloading_discussions">Discussions ...</string>
    <string name="progress_downloading_topics">Topics ...</string>
    <string name="progress_downloading_points">Points ...</string>
    <string name="progress_downloading_descriptions">Descriptions...</string>
    <string name="progress_downloading_sources">Sources ...</string>
    <string name="progress_downloading_comments">Comments ...</string>
    <string name="progress_downloading_attachments">Attachments ...</string>
    <string name="progress_downloading_sessions">Sessions ...</string>
    <string name="progress_downloading_seats">Seats ...</string>
    <string name="progress_calculate_count">Calculate total count ...</string>
    <string name="progress_downloading_finished">Finished</string>
    <string name="progress_title_download_database">Loading</string>

</resources>