<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="0"
        android:showAsAction="always|withText"
        android:title="@string/menu_action_save"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_action_delete"/>
    <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="2"
        android:showAsAction="always|withText"
        android:title="@string/menu_action_cancel"/>
    <item
        android:id="@+id/menu_comment"
        android:icon="@drawable/ic_action_reply"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_action_comment"/>

</menu>